--- a/MeetBallApp/MBSuitUpCell.xib
+++ b/MeetBallApp/MBSuitUpCell.xib
@@ -102,7 +102,7 @@
 								<reference key="IBUIFont" ref="427993286"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 43}</string>
+						<string key="NSFrameSize">{320, 39}</string>
 						<reference key="NSSuperview" ref="40688423"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="846705275"/>
@@ -118,7 +118,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 44}</string>
+				<string key="NSFrameSize">{320, 40}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="704620537"/>
@@ -131,6 +131,7 @@
 				<int key="IBUISelectionStyle">0</int>
 				<reference key="IBUIContentView" ref="704620537"/>
 				<string key="IBUIReuseIdentifier">SuitUpCell</string>
+				<real value="40" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
