--- a/MeetBallApp/MBMenuView.xib
+++ b/MeetBallApp/MBMenuView.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 568}</string>
 						<reference key="NSSuperview" ref="325347656"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="838879491"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="1029447520">
@@ -61,7 +60,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{260, 104}</string>
 								<reference key="NSSuperview" ref="838879491"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="931804458"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="1029447520"/>
@@ -78,7 +76,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{12, 34}, {49, 50}}</string>
 								<reference key="NSSuperview" ref="838879491"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="320911352"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -93,7 +90,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{70, 41}, {136, 21}}</string>
 								<reference key="NSSuperview" ref="838879491"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="219400125"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -124,7 +120,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{70, 63}, {170, 21}}</string>
 								<reference key="NSSuperview" ref="838879491"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="505873000"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -150,7 +145,6 @@
 						</array>
 						<string key="NSFrameSize">{260, 104}</string>
 						<reference key="NSSuperview" ref="325347656"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="303881895"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -167,7 +161,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 103}, {270, 288}}</string>
 						<reference key="NSSuperview" ref="325347656"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="530697668"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -184,7 +177,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="123730209"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -339,42 +331,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">20</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MBMenuView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="menuTableView">UITableView</string>
-						<string key="profileIcon">UIImageView</string>
-						<string key="userHandle">UILabel</string>
-						<string key="userName">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="menuTableView">
-							<string key="name">menuTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profileIcon">
-							<string key="name">profileIcon</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userHandle">
-							<string key="name">userHandle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userName">
-							<string key="name">userName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MBMenuView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
