--- a/MeetBallApp/myMeetBallsStoryBoard.storyboard
+++ b/MeetBallApp/myMeetBallsStoryBoard.storyboard
@@ -29,20 +29,33 @@
                         <viewControllerLayoutGuide type="bottom" id="sO9-Mk-4K1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gpL-6u-3h2">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="132" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="E9J-r1-oxY">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Qdo-ZH-BXj" customClass="meetBallListTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="132"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qdo-ZH-BXj">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="131"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="g2i-wy-qz8" kind="push" identifier="meetBallDetailPush" id="nHr-C4-Ku5"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="BOL-NU-K4p" id="uQ4-GI-V0M"/>
                                     <outlet property="delegate" destination="BOL-NU-K4p" id="pqT-Gj-2te"/>
                                 </connections>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sku-HP-Lz3">
-                                <rect key="frame" x="0.0" y="1" width="320" height="503"/>
+                                <rect key="frame" x="0.0" y="1" width="320" height="415"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
@@ -75,28 +88,151 @@
             </objects>
             <point key="canvasLocation" x="652" y="-36"/>
         </scene>
-        <!--View Controller-->
+        <!--Meet Ball Detail View Controller - MeetBall Title-->
         <scene sceneID="2Tb-Kh-vuz">
             <objects>
-                <viewController id="g2i-wy-qz8" sceneMemberID="viewController">
+                <viewController id="g2i-wy-qz8" customClass="MBMeetBallDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aLS-tH-Dsj"/>
                         <viewControllerLayoutGuide type="bottom" id="Fdl-dB-Fo0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8vG-c5-QKD">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XXL-nB-Wfk">
+                                <rect key="frame" x="65" y="10" width="191" height="219"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y1c-Np-EMe">
+                                        <rect key="frame" x="93" y="0.0" width="4" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="meetBallCompass" translatesAutoresizingMaskIntoConstraints="NO" id="4F8-cf-omB">
+                                        <rect key="frame" x="0.0" y="9" width="190" height="190"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="y1c-Np-EMe" firstAttribute="centerX" secondItem="XXL-nB-Wfk" secondAttribute="centerX" id="6mu-ZW-kk8"/>
+                                    <constraint firstAttribute="width" constant="191" id="96M-NV-7te"/>
+                                    <constraint firstAttribute="bottom" secondItem="4F8-cf-omB" secondAttribute="bottom" constant="20" symbolic="YES" id="KDr-hl-EQv"/>
+                                    <constraint firstItem="y1c-Np-EMe" firstAttribute="top" secondItem="XXL-nB-Wfk" secondAttribute="top" id="OPf-wq-inC"/>
+                                    <constraint firstItem="y1c-Np-EMe" firstAttribute="centerX" secondItem="4F8-cf-omB" secondAttribute="centerX" id="PVN-Gk-GVW"/>
+                                    <constraint firstAttribute="height" constant="219" id="pOw-9f-MK6"/>
+                                    <constraint firstAttribute="bottom" secondItem="y1c-Np-EMe" secondAttribute="bottom" constant="189" id="qDE-uL-ixA"/>
+                                    <constraint firstItem="y1c-Np-EMe" firstAttribute="leading" secondItem="XXL-nB-Wfk" secondAttribute="leading" constant="93" id="w3W-fW-foi"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHg-Sz-anq">
+                                <rect key="frame" x="119" y="92" width="83" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="83" id="7jJ-5y-cSm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="29"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="feet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTx-dF-NoY">
+                                <rect key="frame" x="139" y="127" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="72O-5B-PIV"/>
+                                    <constraint firstAttribute="width" constant="42" id="itO-Hc-xkb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MeetBall Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qw1-vc-sCf">
+                                <rect key="frame" x="20" y="221" width="230" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YWc-AO-sCv">
+                                <rect key="frame" x="20" y="257" width="280" height="147"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAG-cX-b7s">
+                                <rect key="frame" x="258" y="218" width="42" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="notes">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="7gm-Jc-Hxt" kind="push" id="IL7-Js-XCU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20784313730000001" green="0.32549019610000002" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="YWc-AO-sCv" firstAttribute="top" secondItem="TAG-cX-b7s" secondAttribute="bottom" constant="8" symbolic="YES" id="3tW-et-ibX"/>
+                            <constraint firstItem="Qw1-vc-sCf" firstAttribute="top" secondItem="wHg-Sz-anq" secondAttribute="bottom" constant="91" id="56N-0z-zMd"/>
+                            <constraint firstItem="TAG-cX-b7s" firstAttribute="leading" secondItem="Qw1-vc-sCf" secondAttribute="trailing" constant="8" symbolic="YES" id="7UA-YL-H4g"/>
+                            <constraint firstItem="Fdl-dB-Fo0" firstAttribute="top" secondItem="YWc-AO-sCv" secondAttribute="bottom" constant="12" id="AaE-HX-FFP"/>
+                            <constraint firstItem="TAG-cX-b7s" firstAttribute="bottom" secondItem="Qw1-vc-sCf" secondAttribute="bottom" id="IEt-MX-rKT"/>
+                            <constraint firstItem="XXL-nB-Wfk" firstAttribute="top" secondItem="aLS-tH-Dsj" secondAttribute="bottom" constant="10" id="LFP-bO-vVr"/>
+                            <constraint firstItem="TAG-cX-b7s" firstAttribute="trailing" secondItem="YWc-AO-sCv" secondAttribute="trailing" id="RJ6-gT-5TH"/>
+                            <constraint firstItem="Qw1-vc-sCf" firstAttribute="top" secondItem="dTx-dF-NoY" secondAttribute="bottom" constant="73" id="S88-Jc-nuL"/>
+                            <constraint firstItem="TAG-cX-b7s" firstAttribute="top" secondItem="aLS-tH-Dsj" secondAttribute="bottom" constant="218" id="TP2-He-hOE"/>
+                            <constraint firstItem="TAG-cX-b7s" firstAttribute="leading" secondItem="XXL-nB-Wfk" secondAttribute="trailing" constant="2" id="VCb-Ll-Z0V"/>
+                            <constraint firstItem="YWc-AO-sCv" firstAttribute="centerX" secondItem="XXL-nB-Wfk" secondAttribute="centerX" id="VKb-YN-pnY"/>
+                            <constraint firstItem="YWc-AO-sCv" firstAttribute="centerX" secondItem="dTx-dF-NoY" secondAttribute="centerX" id="bdQ-Gu-Hza"/>
+                            <constraint firstItem="dTx-dF-NoY" firstAttribute="top" secondItem="aLS-tH-Dsj" secondAttribute="bottom" constant="127" id="c7D-pE-7Vp"/>
+                            <constraint firstItem="XXL-nB-Wfk" firstAttribute="centerX" secondItem="8vG-c5-QKD" secondAttribute="centerX" id="frQ-DR-HpW"/>
+                            <constraint firstItem="YWc-AO-sCv" firstAttribute="centerX" secondItem="wHg-Sz-anq" secondAttribute="centerX" id="gg6-9i-yWr"/>
+                            <constraint firstAttribute="trailing" secondItem="TAG-cX-b7s" secondAttribute="trailing" constant="20" symbolic="YES" id="lgz-AG-ucW"/>
+                            <constraint firstItem="wHg-Sz-anq" firstAttribute="top" secondItem="aLS-tH-Dsj" secondAttribute="bottom" constant="92" id="nGw-Tb-CZd"/>
+                            <constraint firstItem="YWc-AO-sCv" firstAttribute="leading" secondItem="Qw1-vc-sCf" secondAttribute="leading" id="tNL-0J-LpN"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="MeetBall Title" id="LYq-9I-Yst"/>
+                    <connections>
+                        <outlet property="compass" destination="4F8-cf-omB" id="gf4-y3-eQi"/>
+                        <outlet property="compassContainer" destination="XXL-nB-Wfk" id="us4-29-PUQ"/>
+                        <outlet property="distanceLabel" destination="wHg-Sz-anq" id="Cwi-ec-67V"/>
+                        <outlet property="distanceUnitLabel" destination="dTx-dF-NoY" id="c36-M8-g2y"/>
+                        <outlet property="mapView" destination="YWc-AO-sCv" id="pAV-wl-Sec"/>
+                        <outlet property="titleLabel" destination="Qw1-vc-sCf" id="b4X-HC-eGn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e9v-le-qaI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1130" y="-36"/>
         </scene>
+        <!--View Controller - Notes-->
+        <scene sceneID="v6I-c0-tZ8">
+            <objects>
+                <viewController id="7gm-Jc-Hxt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uRI-VD-pZh"/>
+                        <viewControllerLayoutGuide type="bottom" id="ATO-dn-hej"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZHY-V6-Vuc">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Notes" id="SpU-0c-kRc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G5f-Mz-aho" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1554" y="-32"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="meetBallCompass" width="190" height="190"/>
+        <image name="notes" width="35" height="31"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
